--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   text_scroll: ^0.2.0
   sqflite: ^2.4.2
   path_provider: ^2.1.5
+  path: ^1.9.1
+  date_format: ^2.0.9
 
 dev_dependencies:
   flutter_test:
